--- a/group_vars/fabrics.yaml
+++ b/group_vars/fabrics.yaml
@@ -1,7 +1,4 @@
 ---
 ops_bridges:
   - name: bridge_normal
-    ports: [4, 5, 6, 7, 8]
-    vlans:
-      - name: VLAN10
-        id: 10
+    ports: []
