--- a/group_vars/switches.yaml
+++ b/group_vars/switches.yaml
@@ -18,11 +18,6 @@ ops_system_hostname: "{{ inventory_hostname }}"
 
 # Only eight ports will be used in this environment.
 ops_interfaces:
-  - name: 1
-  - name: 2
-  - name: 3
-  - name: 4
-  - name: 5
-  - name: 6
-  - name: 7
-  - name: 8
+  - name: eth1
+  - name: eth2
+  - name: eth3
