Initial Ansible drop for configuring two OpenSwitch appliances with simple BGP peering that can be used on a standard Linux box or a VM in GNS3.
Signed-off-by: Chinh Le <chinh.le@hpe.com>

--- a/site.yaml
+++ b/site.yaml
@@ -10,25 +10,7 @@
       tags: [ always, basic ]
 
 - name: L2/L3 configuration on fabric switches
-  hosts: fabrics
-  gather_facts: no
-  vars:
-    ops_intf_admin_state: up
-    ops_debug: no
-  roles:
-    - { role: switch, tags: [ always, basic ] }
-
-- name: L2/L3 configuration on spine switches
-  hosts: spines
-  gather_facts: no
-  vars:
-    ops_intf_admin_state: up
-    ops_debug: no
-  roles:
-    - { role: switch, tags: [ always, basic ] }
-
-- name: L2/L3 configuration on leaf switches
-  hosts: leaves
+  hosts: ops
   gather_facts: no
   vars:
     ops_intf_admin_state: up
