--- a/utils/copy_public_key.yaml
+++ b/utils/copy_public_key.yaml
@@ -1,12 +1,8 @@
 ---
 - name: copy ssh public key to the switch
-  hosts: fabrics
+  hosts: ops
   gather_facts: no
+  vars:
+    ansible_user: root
   tasks:
-    - authorized_key: user=admin key= "{{ lookup('file', ssh_public_key) }}"
-
-- name: copy ssh public key to the switch
-  hosts: spines
-  gather_facts: no
-  tasks:
-    - authorized_key: user=admin key= "{{ lookup('file', ssh_public_key) }}"
+    - authorized_key: user=admin key="{{ lookup('file', ssh_public_key) }}"
