--- a/bgp.yaml
+++ b/bgp.yaml
@@ -1,22 +1,6 @@
 ---
-- name: BGP configuration on fabric switches
-  hosts: fabrics
-  gather_facts: no
-  vars:
-    ops_debug: no
-  roles:
-    - role: bgp
-
-- name: BGP configuration on spine switches
-  hosts: spines
-  gather_facts: no
-  vars:
-    ops_debug: no
-  roles:
-    - role: bgp
-
-- name: BGP configuration on leaf switches
-  hosts: leaves
+- name: BGP configuration on ops switches
+  hosts: ops
   gather_facts: no
   vars:
     ops_debug: no
@@ -66,18 +50,11 @@
     - name: show ip route
       ops_command:
         commands:
-          - show ip route
+          - show ip bgp
         provider: "{{ ops_provider }}"
         waitfor:
-          - "result[0] contains '172.16.1.0/24'"
-          - "result[0] contains '172.16.2.0/24'"
-          - "result[0] contains '172.16.11.0/24'"
-          - "result[0] contains '172.16.12.0/24'"
-          - "result[0] contains '172.16.21.0/24'"
-          - "result[0] contains '172.16.22.0/24'"
-          - "result[0] contains '172.16.30.0/24'"
-          - "result[0] contains '172.16.40.0/24'"
-          - "result[0] contains '172.16.50.0/24'"
+          - "result[0] contains '30.0.0.0/8'"
+          - "result[0] contains '40.0.0.0/8'"
         interval: 3
         retries: 3
       register: result
